attempt to fix jumpiness of accordian for better UX -enhancement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,9 @@ audio {
 
 .panel-body {
 	overflow: auto;
+	box-sizing: content-box;
+	-moz-box-sizing: content-box;
+
 }
 
 .panel-title {
